--- a/css/style.css
+++ b/css/style.css
@@ -124,17 +124,6 @@ h3 {
     margin-top: 0%;
   }
 }
-@keyframes opacityframes {
-  0% {
-    opacity: 1;
-  }
-  55% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 .localisation {
   display: flex;
   align-items: center;
@@ -309,12 +298,12 @@ h3 {
   width: 100%;
 }
 .fonctionnement ol li {
-  width: 90%;
-  margin: 2% 2% 5% 5%;
-  padding: 30px 0% 30px 0%;
+  width: 82%;
+  margin: 30px 5% 30px 5%;
+  padding: 20px 4% 20px 4%;
   box-shadow: 5px 5px 10px #cccccc;
   border-radius: 30px;
-  font-size: 1.3em;
+  font-size: 1.2em;
   background-color: #f2f2f2;
   transition: all 300ms ease-in;
   transform: scale(1);
@@ -342,9 +331,8 @@ h3 {
   color: white;
   padding: 0.4rem 0.7rem 0.4rem 0.7rem;
   border-radius: 100%;
-  margin-right: 2%;
   position: relative;
-  left: -15px;
+  left: -6%;
   margin-left: unset;
 }
 
@@ -561,20 +549,6 @@ h3 {
 
 .corps {
   animation: overflow-body 0.01s 1.5s both;
-}
-.corps .logo {
-  background-color: #fff;
-  position: fixed;
-  animation: opacityframe 0.01s 1.5s both;
-  z-index: 10;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.corps .loading {
-  filter: hue-rotate(180deg);
 }
 
 /*# sourceMappingURL=style.css.map */
