--- a/sass/main.scss
+++ b/sass/main.scss
@@ -129,12 +129,12 @@
 		padding-inline-start: unset;
 		width: 100%;
 		li {
-			width: 90%;
-			margin: 2% 2% 5% 5%;
-			padding: 30px 0% 30px 0%;
+			width: 82%;
+			margin: 30px 5% 30px 5%;
+			padding: 20px 4% 20px 4%;
 			box-shadow: 5px 5px 10px lighten($color: black, $amount: 80%);
 			border-radius: 30px;
-			font-size: 1.3em;
+			font-size: 1.2em;
 			background-color: lighten($color: black, $amount: 95%);
 			transition: all 300ms ease-in;
 			transform: scale(1);
@@ -162,9 +162,8 @@
 			color: white;
 			padding: .4rem .7rem .4rem .7rem;
 			border-radius: 100%;
-			margin-right: 2%;
 			position: relative;
-			left: -15px;
+			left: -6%;
 			margin-left: unset;
 		}
 	}
